--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* fonte Kdam Thmor importada do google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
 
 * {
@@ -27,10 +28,10 @@ ul {
  li {
     list-style: none;
     color: aliceblue;
-    cursor: pointer;
+    cursor: pointer; /* tira a borda ao  */
     font-size: 19px;
     transition: .5s;
-    font-family: 'Kdas Thnor Pro', sans-serif;
+    font-family: 'Kdas Thmor Pro', sans-serif; /* tira a borda ao  */
  }
 
  li:hover{
@@ -40,4 +41,69 @@ ul {
  #logo {
     width: 150px;
     height: auto;
+ }
+
+ #banner {
+    background-image: url('https://images7.alphacoders.com/120/1207353.jpg');
+    background-position: 50% 50%;
+    background-size: cover; /* para oculpar todo espaço da div */
+    width: 100%;
+    height: 600px;
+ }
+
+ #trailer-container {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+ }
+
+ .content {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+ }
+
+ .trailer {
+    width: 50%;
+ }
+
+ #sinopse {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 30px;
+ }
+
+ .description {
+    color: #fff;
+    font-size: 19px;
+    font-family: 'Kdas Thmor Pro', sans-serif;
+    width: 70%;  
+ }
+
+ .button {
+    width: 200px;
+    height: 60px;
+    background-color: #D21617;
+    color: #fff;
+    padding: 8px 10px;
+    border-radius: 5px;
+    cursor: pointer; 
+    transition: .8s;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold; /* tira a borda ao  */
+    border: none; /* tira a borda ao  */
+    outline: none; /* tira a borda ao  */
+    margin-top: 25px;
+ }
+
+ .button:hover {
+    background-color: #fff;
+    color: #000;
  }
