--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@ ul {
  li {
     list-style: none;
     color: aliceblue;
-    cursor: pointer; /* tira a borda ao  */
+    cursor: pointer; 
     font-size: 19px;
     transition: .5s;
-    font-family: 'Kdas Thmor Pro', sans-serif; /* tira a borda ao  */
+    font-family: 'Kdam Thmor Pro', sans-serif;
  }
 
  li:hover{
@@ -80,7 +80,7 @@ ul {
  .description {
     color: #fff;
     font-size: 19px;
-    font-family: 'Kdas Thmor Pro', sans-serif;
+    font-family: 'Kdam Thmor Pro', sans-serif;
     width: 70%;  
  }
 
@@ -137,7 +137,7 @@ ul {
     padding: 0 0 20px 10px;
     color: #fff;
     font-size: 17px;
-    font-family: 'Kdas Thmor Pro', sans-serif;
+    font-family: 'Kdam Thmor Pro', sans-serif;
  }
 
 .card:hover {
@@ -154,4 +154,80 @@ ul {
 
 .banner-3 {
     background-image: url('https://static.wikia.nocookie.net/batman/images/3/36/Jim_Gordon_Total_Film_still.webp/revision/latest?cb=20220220041206');
+}
+
+footer {
+   height: 300px;
+   margin-top: 50px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-around;
+}
+
+span {
+   color: #fff;
+   font-family: 'Kdam Thmor Pro', sans-serif;
+}
+
+.footer-navigation {
+   display: none;
+}
+
+.footer-list {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+@media (max-width: 768px){
+   .footer-navigation{
+      display: block;
+   }
+
+   nav {
+      display: none;
+   }
+
+   #banner {
+      background-position: 0%;
+   }
+   #trailer-container {
+      width: 100%;
+      height: 400px;
+      display: flex;
+      flex-direction: column;
+   }
+
+   .content {
+      width: 95%;
+      display: flex;
+      flex-direction: column;
+   }
+
+   .trailer {
+      width: 100%;
+   }
+
+   #sinopse {
+      width: 95%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+   }
+
+   .description {
+      width: 100%;
+   }
+
+   .button {
+      width: 100%;
+      margin-top: 30px;
+   }
+
+   .cards-content {
+      grid-template-columns: 1fr;
+      margin-top: 150px;
+   }
+
 }
