--- a/contato.css
+++ b/contato.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
+
 * {
     margin: 0;
     padding: 0;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: black;
     list-style: none;
     text-decoration: none;
 }
@@ -47,10 +48,8 @@ li:hover{
 /* corpo */
 .caixa-container {
     width: 100%;
-    height: 606px;
     display: flex;
     justify-content: center;
-    align-items: center;
     background-image: url('https://images.alphacoders.com/120/1207971.jpg');
     background-size: cover;
     background-position: 50% 50%;
@@ -60,7 +59,7 @@ li:hover{
  
 .caixa {
     width: 700px;
-    height: auto;
+    margin: 50px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
