--- a/fotos.css
+++ b/fotos.css
@@ -70,6 +70,7 @@ li:hover{
     border-radius: 5px;
     transition: .5s;
     cursor: pointer;
+    background-position: 50% 50%;
 }
 
 .fotos:hover {
